--- a/lefthook.yml
+++ b/lefthook.yml
@@ -3,14 +3,14 @@
 #   Refer for explanation to following link:
 #   https://github.com/evilmartians/lefthook/blob/master/docs/configuration.md
 #
-# pre-push:
-#   commands:
-#     packages-audit:
-#       tags: frontend security
-#       run: yarn audit
-#     gems-audit:
-#       tags: backend security
-#       run: bundle audit
+pre-push:
+  commands:
+    check-lint :
+      tags: frontend style
+      stage_fixed: true
+      glob: "*.{js,ts,jsx,tsx,css,json,md,html}"
+      run: pnpm lint
+    
 #
 pre-commit:
   parallel: true
@@ -21,21 +21,3 @@ pre-commit:
       run: pnpm format
       stage_fixed: true
 
-    # eslint:
-    #   glob: "*.{js,ts,jsx,tsx}"
-    #   run: yarn eslint {staged_files}
-    # rubocop:
-    #   tags: backend style
-    #   glob: "*.rb"
-    #   exclude: '(^|/)(application|routes)\.rb$'
-    #   run: bundle exec rubocop --force-exclusion {all_files}
-    # govet:
-    #   tags: backend style
-    #   files: git ls-files -m
-    #   glob: "*.go"
-    #   run: go vet {files}
-  # scripts:
-  #   "hello.js":
-  #     runner: node
-  #   "any.go":
-  #     runner: go run
