--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"lint": "biome lint --write .",
 		"preview": "vite preview",
-		"format": "biome format --write ."
+		"format": "biome format --write .",
+    "sync-hook" : "lefthook install"
 	},
 	"dependencies": {
 		"react": "^18.3.1",
